--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-dom": "16.8.0",
     "react-draft-wysiwyg": "^1.14.4",
     "react-dropzone-component": "^3.2.0",
+    "react-ga": "^2.7.0",
     "react-html-parser": "^2.0.2",
     "react-modal": "^3.11.1",
     "react-redux": "5.0.6",
